packages/cli/src/tui/snapshots/envio__tui__render__tests__moves_events_to_their_own_row_on_a_narrow_terminal.snap
---
source: packages/cli/src/tui/render.rs
expression: "render(&state(&[chain], Messages::Loading), 40)"
---
Buffer {
    area: Rect { x: 0, y: 0, width: 40, height: 10 },
    content: [
        "Chain: 1 ⚡  25%                        ", // hidden by multi-width symbols: [(10, " ")]
        "Blocks: 1,250,000 / 2,000,000 (End Block",
        ")                                       ",
        "Events: 173,456                         ",
        "                                        ",
        "Total Events: 173,456 (5,000 events/sec)",
        "Sync Time ETA: 5 minutes (⠸ in progress)",
        "                                        ",
        "GraphQL: http://localhost:8080 (password",
        ": testing)                              ",
    ],
    styles: [
        x: 0, y: 0, fg: Reset, bg: Reset, modifier: NONE,
        x: 7, y: 0, fg: Reset, bg: Reset, modifier: BOLD,
        x: 8, y: 0, fg: Reset, bg: Reset, modifier: NONE,
        x: 9, y: 0, fg: Rgb(255, 187, 47), bg: Reset, modifier: NONE,
        x: 10, y: 0, fg: Reset, bg: Reset, modifier: NONE,
        x: 11, y: 0, fg: DarkGray, bg: Rgb(255, 187, 47), modifier: NONE,
        x: 17, y: 0, fg: Reset, bg: DarkGray, modifier: NONE,
        x: 24, y: 0, fg: Reset, bg: Gray, modifier: NONE,
        x: 38, y: 0, fg: Reset, bg: Reset, modifier: NONE,
        x: 0, y: 1, fg: DarkGray, bg: Reset, modifier: NONE,
        x: 3, y: 2, fg: Reset, bg: Reset, modifier: NONE,
        x: 0, y: 3, fg: DarkGray, bg: Reset, modifier: NONE,
        x: 15, y: 3, fg: Reset, bg: Reset, modifier: NONE,
        x: 0, y: 5, fg: Reset, bg: Reset, modifier: BOLD,
        x: 14, y: 5, fg: Rgb(255, 187, 47), bg: Reset, modifier: NONE,
        x: 21, y: 5, fg: DarkGray, bg: Reset, modifier: NONE,
        x: 0, y: 6, fg: Reset, bg: Reset, modifier: BOLD,
        x: 26, y: 6, fg: Rgb(152, 96, 229), bg: Reset, modifier: BOLD,
        x: 27, y: 6, fg: Rgb(255, 187, 47), bg: Reset, modifier: BOLD,
        x: 39, y: 6, fg: Reset, bg: Reset, modifier: BOLD,
        x: 0, y: 7, fg: Reset, bg: Reset, modifier: NONE,
        x: 9, y: 8, fg: Rgb(108, 191, 238), bg: Reset, modifier: UNDERLINED,
        x: 30, y: 8, fg: DarkGray, bg: Reset, modifier: NONE,
        x: 10, y: 9, fg: Reset, bg: Reset, modifier: NONE,
    ]
}
